<resources>
    <string name="app_name">Designer Profile</string>
    <string name="user_facebbok">mehul.solanki.0</string>
    <string name="user_twitter">solankimehuln</string>
    <string name="user_instagram">mehulsolanki0</string>
    <string name="user_google">+SolankiMehuln</string>
    <string name="user_linkdin">mehul-solanki</string>
    <string name="user_skype">mehul2792</string>
    <string name="infocity">infocity, Gandhi.</string>
</resources>
