<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context="com.flexsotware.mehul.designerprofile.MainActivity">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background" />

    <LinearLayout
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_below="@id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:weightSum="100"
            android:layout_weight="25"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_facebook_logo_button"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextViewSocial"
                android:text="@string/user_facebbok"/>

            <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_twitter"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                style="@style/TextViewSocial"
                android:text="@string/user_twitter"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:weightSum="100"
            android:layout_weight="25"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_instagram_circle"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                style="@style/TextViewSocial"
                android:text="@string/user_instagram"/>

            <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_googleplus_logo"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                style="@style/TextViewSocial"
                android:text="@string/user_google"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:weightSum="100"
            android:layout_weight="25"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_linkedin_button"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                style="@style/TextViewSocial"
                android:text="@string/user_linkdin"/>

            <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_skype_logo"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                style="@style/TextViewSocial"
                android:text="@string/user_skype"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:weightSum="100"
            android:layout_weight="25"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_youtube_circle"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                style="@style/TextViewSocial"
                android:text="SolankiMehuln"/>

            <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_map"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                style="@style/TextViewSocial"
                android:text="@string/infocity"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-100dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/mm"
            app:civ_border_color="@color/pink"
            app:civ_border_width="7dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="bottom">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Mehul Solanki"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Android Developer, photographer , designer"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="24dp"
        app:theme="@style/TransparentBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="Profile"
            android:textSize="24sp" />
    </android.support.v7.widget.Toolbar>



</RelativeLayout>
